# CoreThink-MCP

./: .clinerules  .cursorrules  .env.example  .gitignore  20250909_全ログ.md  20250910_全ログ.md  20250910_午前全セッションログ.md  20250911_セッション全ログ.md  CONTRIBUTING.md  CoreThink-MCP プロジェクト深度分析_2025年09月11日.md  CoreThink_MCP_統合GSR推論エンジン_詳細設計書_重要書類.md  CoreThink論文_決定的コード比較解説_最重要書類.md  CoreThink－MCP実際の出力.md  GPT5提言技術レビュー.md  IMPLEMENTATION_PLAN.md  LICENSE  Phase1_完了レポート.md  README.md  README_backup.md  README_old.md  README_poe_sample.md  REQUIREMENTS.md  SETUP.md  TASKS.md  analyze_middleware_issues.py  claude_desktop_config.example.json  claude_desktop_config.json  claude_desktop_config.json.bak  claude_desktop_config_uv.example.json  claude_desktop_config_uv.json  claude_desktop_config_uv.json.bak  corethink-mcp.dxt  create_removal_plan.py  docker-compose.yml  example2.md  generate_phase2_report.py  lm-studio-config.md  pyproject.toml  setup_helper.py  test_corethink_revert.py  (+13 more)
.github/: copilot-instructions.md  mcp-server-rules.instructions.md
Long_Memory_MCP_doc/: LLMによるエンティティパックの自動生成と強化.instructions.md  README.md  long memory MCPの目的と開発指針.md.instructions.md  エンティティシステム_仕様書.instructions.md  知識グラフベクトルデータベース要件定義仕様書.instructions.md  自動トリガーワードシステム詳細解説.md
conf/: feature_flags.yaml
docs/: GETTING_STARTED.md  TROUBLESHOOTING.md  USER_GUIDE.md  elicitation_implementation.md  fastmcp_analysis_report.md  seamless_elicitation_guide.md
install/: README.md  mcp.json.linux  mcp.json.macos  mcp.json.windows
nodejs/: IMPLEMENTATION.md  README.md  package-lock.json  package.json  (+1 more)
(+51 files in other folders)
