[project]
name = "corethink-mcp"
version = "1.0.0"
description = "A CoreThink General Symbolics Reasoning MCP server for long horizon tasks"
requires-python = ">=3.11.12,<3.12"
dependencies = [
    "mcp[cli]>=0.2.0",
    "fastmcp>=0.1.3",
    "pyyaml>=6.0",
    "gitpython>=3.1.43",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio",
    "black",
    "ruff"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"corethink_mcp" = ["constraints.txt", "logs/*.log"]

[project.scripts]
corethink-mcp = "corethink_mcp.server.corethink_server:app"
